--- a/index.html
+++ b/index.html
@@ -77,35 +77,34 @@
 
       <div class="section-title">
         <h2>About</h2>
-        <p>Learn more about me</p>
       </div>
 
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img src="assets/img/image.jpg" class="img-fluid" alt="">
+          <!-- <img src="assets/img/image.jpg" class="img-fluid" alt=""> -->
         </div>
-        <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
+        <div >
           <h3>Software Developer &amp; Data Scientist/Engineer</h3><br>
 
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 September, 2003</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>rishi-savla.netlify.app</span>
+                <li><i ></i> <strong>Birthday:</strong> <span>1 September, 2003</span></li>
+                <li><i ></i> <strong>Website:</strong> <span>rishi-savla.netlify.app</span>
                 </li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 8850094151</span></li>
+                <li><i ></i> <strong>Phone:</strong> <span>+91 8850094151</span></li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor's</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>rishirsavla@gmail.com</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Mumbai , India</span></li>
+                <li><i ></i> <strong>Degree:</strong> <span>Bachelor's</span></li>
+                <li><i ></i> <strong>Email:</strong> <span>rishirsavla@gmail.com</span></li>
+                <li><i ></i> <strong>City:</strong> <span>Mumbai , India</span></li>
               </ul>
             </div>
           </div>
           <p>
-            I am an aspiring Data Scientist and a Software Developer that loves coding and new technologies. I am a person that loves to learn new things and use them to develop things to add value to my learning.
+            I am an aspiring Data Scientist and a Software Developer that loves coding and new technologies. I am a person who loves to learn new techstacks and use them to develop things to add value to my learning.
           </p>
         </div>
       </div>
@@ -193,14 +192,14 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
-            <i class="devicon-tensorflow-original colored"></i>
-            <h3>TENSORFLOW</h3>
+            <i class="devicon-flask-plain"></i>
+            <h3>FLASK</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
-            <img src="./assets/img/sklearn.png" alt="sklearn" class="sklearn">
-            <h3>SKLEARN</h3>
+            <i class="devicon-django-plain"></i>
+            <h3>DJANGO</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
@@ -223,14 +222,14 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="devicon-flask-plain"></i>
-            <h3>FLASK</h3>
+            <i class="devicon-tensorflow-original colored"></i>
+            <h3>TENSORFLOW</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="devicon-django-plain"></i>
-            <h3>DJANGO</h3>
+            <i class="devicon-scikitlearn-plain colored"></i>
+            <h3>SKLEARN</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
@@ -329,7 +328,7 @@
             <ul>
               <li>Mumbai-64 , India</li>
               <li>(+91) 8850094151</li>
-              <li>info.rishisavla@gmail.com</li>
+              <li>rishirsavla@gmail.com</li>
             </ul>
             </p>
           </div>
@@ -343,7 +342,7 @@
           </div>
           <div class="resume-item">
             <h4>BACHELOR OF ENGINEERING</h4>
-            <h5>2022 - 2025</h5>
+            <h5>2021 - 2025</h5>
             <p><em>Dwarkadas.J.Sanghvi College of Engineering, Mumbai</em></p>
             <p>I am currently pursuing my Bachelor's degree in Data Science from the above college in Mumbai University.
             </p>
@@ -354,18 +353,31 @@
 
 
           <div class="resume-item">
-            <h4>Hirademy Technologies</h4>
-            <h5 class="font">FEBRUARY 2024 - MAY 2024</h5>
-            <p><em>Mumbai, India</em></p>
+            <h4>WhatBytes</h4>
+            <h5 class="font">JULY 2024 - PRESENT</h5>
+            <p><em>Remote, India</em></p>
             <p>
             <ul>
-              <li>Developed and Integrated backend of a AI based Fitness app.</li>
-              <li>Developing and managing Django based admin console dashboard for administrative management.</li>
-              <li>Working with PostgresSQL databases for the database management of the admin dashboard. </li>
-              <li>Worked with Docker and AWS tools for deployment and development of the app.</li>
+              <li>Developed and managed advanced backend systems for clients using Django and REST framework.</li>
+              <li>Performed debugging and migration of backend system.</li>
+              <li>Worked with postgresql and mysql for database management and postman for api testing.</li>
             </ul>
           </p>
-        </div>
+
+          </div>
+            <div class="resume-item">
+              <h4>Hirademy Technologies</h4>
+              <h5 class="font">FEBRUARY 2024 - MAY 2024</h5>
+              <p><em>Remote, India</em></p>
+              <p>
+              <ul>
+                <li>Developed and Integrated backend of a AI based Fitness app.</li>
+                <li>Developing and managing Django based admin console dashboard for administrative management.</li>
+                <li>Working with PostgresSQL databases for the database management of the admin dashboard. </li>
+                <li>Worked with Docker and AWS tools for deployment and development of the app.</li>
+              </ul>
+            </p>
+          </div>
           
           <div class="resume-item">
             <h4>CodeClause</h4>
@@ -497,6 +509,19 @@
             </div>
           </div>
         </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-WD">
+          <div class="portfolio-wrap">
+            <img src="assets/img/Projects/Prodigy/prodigy.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Prodigy</h4>
+              <div class="portfolio-links">
+                <a href="https://github.com/Rishi-50/Prodigy"  target="_blank"
+                  class="portfolio" title="App 2"><i class="bi bi-github"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
         
 
       </div>
@@ -551,7 +576,7 @@
         </div>
       </div>
 
-      <form action="mailto: info.rishisavla@gmail.com" method="post" enctype="text/plain" class="php-email-form mt-4">
+      <form action="mailto: rishisavla01@gmail.com" method="post" enctype="text/plain" class="php-email-form mt-4">
         <div class="row">
           <div class="col-md-6 form-group">
             <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
