--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <!-- <img src="assets/img/image.jpg" class="img-fluid" alt=""> -->
         </div>
         <div >
-          <h3>Software Developer &amp; Data Scientist/Engineer</h3><br>
+          <h3>Backend Developer &amp; Data Scientist</h3><br>
 
           <div class="row">
             <div class="col-lg-6">
@@ -98,13 +98,13 @@
             <div class="col-lg-6">
               <ul>
                 <li><i ></i> <strong>Degree:</strong> <span>Bachelor's</span></li>
-                <li><i ></i> <strong>Email:</strong> <span>rishirsavla@gmail.com</span></li>
+                <li><i ></i> <strong>Email:</strong> <span>rishisavla01@gmail.com</span></li>
                 <li><i ></i> <strong>City:</strong> <span>Mumbai , India</span></li>
               </ul>
             </div>
           </div>
           <p>
-            I am an aspiring Data Scientist and a Software Developer that loves coding and new technologies. I am a person who loves to learn new techstacks and use them to develop things to add value to my learning.
+            I am an aspiring Backend Developer and a Data Scientist that loves soling problems and working with new technologies. I am a person who loves to understand and learn new techstacks and use them to develop things to add value to my learning.
           </p>
         </div>
       </div>
@@ -192,14 +192,14 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
-            <i class="devicon-flask-plain"></i>
-            <h3>FLASK</h3>
+            <i class="devicon-django-plain"></i>
+            <h3>DJANGO</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
-            <i class="devicon-django-plain"></i>
-            <h3>DJANGO</h3>
+            <i class="devicon-flask-plain"></i>
+            <h3>FLASK</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
@@ -246,9 +246,33 @@
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
+          <div class="icon-box">            
+            <i class="devicon-docker-plain colored"></i>          
+            <h3>DOCKER</h3>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="devicon-java-plain colored"></i>
-            <h3>JAVA</h3>
+            <i class="devicon-postman-plain"></i>
+            <h3>POSTMAN</h3>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 mt-4">
+          <div class="icon-box">
+            <i class="devicon-go-plain colored"></i>
+            <h3>GOLANG</h3>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 mt-4">
+          <div class="icon-box">
+            <i class="devicon-streamlit-plain"></i>
+            <h3>STREAMLIT</h3>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 mt-4">
+          <div class="icon-box">
+            <i class="devicon-nginx-original"></i>
+            <h3>NGINX</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
@@ -265,26 +289,8 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="devicon-javascript-plain colored"></i>
-            <h3>JAVASCRIPT</h3>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-4 mt-4">
-          <div class="icon-box">
             <i class="devicon-cplusplus-plain"></i>
             <h3>C/C++</h3>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-4 mt-4">
-          <div class="icon-box">            
-            <i class="devicon-docker-plain colored"></i>          
-            <h3>DOCKER</h3>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-4 mt-4">
-          <div class="icon-box">
-          <i class="devicon-postman-plain"></i>
-            <h3>POSTMAN</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
@@ -297,6 +303,24 @@
           <div class="icon-box">
             <i class="devicon-git-plain colored"></i>
             <h3>GIT</h3>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 mt-4">
+          <div class="icon-box">
+            <i class="devicon-notion-plain colored"></i>
+            <h3>NOTION</h3>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 mt-4">
+          <div class="icon-box">
+            <i class="devicon-raspberrypi-plain colored"></i>
+            <h3>RASPBERRY-PI</h3>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 mt-4">
+          <div class="icon-box">
+            <i class="devicon-slack-plain"></i>
+            <h3>SLACK</h3>
           </div>
         </div>
       </div>
@@ -322,13 +346,13 @@
           <h3 class="resume-title">Sumary</h3>
           <div class="resume-item pb-0">
             <h4>Rishi Savla</h4>
-            <p><em>I am an aspiring Data Scientist and a Software Developer that loves coding and new technologies. I am a person that loves to learn new things and use them to develop things to add value to my learning. </em>
+            
             </p>
             <p>
             <ul>
-              <li>Mumbai-64 , India</li>
+              <li>Mumbai, India</li>
               <li>(+91) 8850094151</li>
-              <li>rishirsavla@gmail.com</li>
+              <li>rishisavla01@gmail.com</li>
             </ul>
             </p>
           </div>
@@ -336,16 +360,17 @@
           <h3 class="resume-title">Education</h3>
           <div class="resume-item">
             <h4>SCHOOL</h4>
-            <h5>2008 - 2018</h5>
-            <p><em>Dr. Sarvepalli Radhakrishnan Vidyalaya, Mumbai</em></p>
-            <p>This was the school where I pursued my primary schooling before choosing Science as a field.</p>
+            <h5>20019 - 2021</h5>
+            <p><em>Nirmala Memorial Foundation College of Commerce and Science, Mumbai</em></p>
+            <p>HSC 12th Board Examination</p>
+            <p>Percentage: 90.8%</p>
           </div>
           <div class="resume-item">
             <h4>BACHELOR OF ENGINEERING</h4>
             <h5>2021 - 2025</h5>
             <p><em>Dwarkadas.J.Sanghvi College of Engineering, Mumbai</em></p>
-            <p>I am currently pursuing my Bachelor's degree in Data Science from the above college in Mumbai University.
-            </p>
+            <p>Bachelor of Technology in Computer Science and Engineering (Data Science)</p>
+            <p>CGPA: 8.11</p>
           </div>
         </div>
         <div class="col-lg-6">
@@ -354,13 +379,13 @@
 
           <div class="resume-item">
             <h4>WhatBytes</h4>
-            <h5 class="font">JULY 2024 - PRESENT</h5>
+            <h5 class="font">JULY 2024 - SEPTEMBER 2024</h5>
             <p><em>Remote, India</em></p>
             <p>
             <ul>
-              <li>Developed and managed advanced backend systems for clients using Django and REST framework.</li>
-              <li>Performed debugging and migration of backend system.</li>
-              <li>Worked with postgresql and mysql for database management and postman for api testing.</li>
+              <li>Developed and managed scalable backend systems for clients using Django and REST framework.</li>
+              <li>Performed debugging and migration of backend systems and optimized the cron mechanism timing by 30%.</li>
+              <li>Worked with Postgresql and Mysql databases and postman for api testing.</li>
             </ul>
           </p>
 
@@ -371,10 +396,10 @@
               <p><em>Remote, India</em></p>
               <p>
               <ul>
-                <li>Developed and Integrated backend of a AI based Fitness app.</li>
-                <li>Developing and managing Django based admin console dashboard for administrative management.</li>
-                <li>Working with PostgresSQL databases for the database management of the admin dashboard. </li>
+                <li>Developed and managed the backends of different webapps using Flask and Django frameworks</li>
+                <li>Worked with Postgresql and Mysql databases and postman for api testing.</li>
                 <li>Worked with Docker and AWS tools for deployment and development of the app.</li>
+                <li>Managed a team as project lead on one of the project.</li>
               </ul>
             </p>
           </div>
@@ -382,7 +407,7 @@
           <div class="resume-item">
             <h4>CodeClause</h4>
             <h5 class="font">OCTOBER 2023 - NOVEMBER 2023</h5>
-            <p><em>Mumbai, India</em></p>
+            <p><em>Remote, India</em></p>
             <p>
               <ul>
                 <li>Developed various machine learning models for training and achieving the best results. </li>
@@ -394,7 +419,7 @@
         <div class="resume-item">
           <h4>octanet</h4>
           <h5 class="font">JUNE 2023 - JULY 2023</h5>
-          <p><em>Mumbai, India</em></p>
+          <p><em>Remote, India</em></p>
           <p>
           <ul>
             <li>Worked on different projects during the time of the internship.</li>
@@ -432,7 +457,7 @@
             <li data-filter=".filter-ML">Machine Learning</li>
 
             <!-- WD = Web Development -->
-            <li data-filter=".filter-WD">Web Development</li>
+            <li data-filter=".filter-WD">Development</li>
           </ul>
         </div>
       </div>
@@ -522,6 +547,19 @@
             </div>
           </div>
         </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-WD">
+          <div class="portfolio-wrap">
+            <img src="assets/img/Projects/CRM/logo.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>CRM software</h4>
+              <div class="portfolio-links">
+                <a href="https://github.com/Rishi-50/django_customer_management"  target="_blank"
+                  class="portfolio" title="App 2"><i class="bi bi-github"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
         
 
       </div>
@@ -544,7 +582,7 @@
           <div class="info-box">
             <i class="bx bx-map"></i>
             <h3>My Address</h3>
-            <p>Malad (W) , Mumbai - 400064</p>
+            <p>Mumbai - 400064, Maharashtra, India</p>
           </div> 
         </div>
 
@@ -555,7 +593,7 @@
             <div class="social-links">
               <a href="https://twitter.com/RishiSavla01" class="twitter"><i class="bi bi-twitter"></i></a>
               <a href="https://www.linkedin.com/in/rishi-savla-976444234/" class="linkedin"><i class="bi bi-linkedin"></i></a>
-              <a href="mailto: rishirsavla@gmail.com" class="gmail"><i class="bi bi-envelope"></i></a>
+              <a href="mailto: rishisavla01@gmail.com" class="gmail"><i class="bi bi-envelope"></i></a>
             </div>
           </div>
         </div>
