--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email Me</h3>
-            <p>rishirsavla@gmail.com</p>
+            <p>rishisavla01@gmail.com</p>
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
